@@ -1,52 +1,54 @@
 package com.group.msci.puzzlegenerator.utils.json;
 
+import android.util.Log;
+
+import com.group.msci.puzzlegenerator.utils.UrlBuilder;
 import org.json.JSONException;
 import org.json.JSONObject;
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
 
 /**
  * Created by Magdi on 06/04/2016.
  */
 public class ScoreboardJSON implements Runnable {
-    private String puzzleType;
+
+    private UrlBuilder builder;
     private volatile JSONObject jsonFile;
 
-    public ScoreboardJSON (String type) {
-        puzzleType = type;
+    public ScoreboardJSON (char type) {
+        builder = new UrlBuilder(findScript(type));
+        builder.setPrefix("score/");
     }
-
-    @Override
-    public void run() {
-        buildJSON();
-    }
-
 
     public JSONObject getJSON() {
         return jsonFile;
     }
 
+    public String findScript(char puzzleType) {
+        if (puzzleType == 'd') {
+            return "dotLoad.php";
+        }
+        else if (puzzleType == 'm') {
+            return "mazeLoad.php";
+        }
+        else if (puzzleType == 'p') {
+            return "picrossLoad.php";
+        }
+        else if (puzzleType == 'b'){
+            return "ballLoad.php";
+        }
+        else {
+            throw new IllegalArgumentException("Wrong maze argument");
+        }
+    }
 
-    public void buildJSON() {
+    @Override
+    public void run() {
         try {
-            URL url;
-            if (puzzleType.equals("Picross")) {
-                url = new URL("http://webprojects.eecs.qmul.ac.uk/ma334/score/picrossLoad.php");
-            }
-            else if (puzzleType.equals("Dot")) {
-                url = new URL("http://webprojects.eecs.qmul.ac.uk/ma334/score/dotLoad.php");
-            }
-            else if (puzzleType.equals("Ball")) {
-                url = new URL("http://webprojects.eecs.qmul.ac.uk/ma334/score/ballLoad.php");
-            }
-            else {
-                url = new URL("http://webprojects.eecs.qmul.ac.uk/ma334/score/mazeLoad.php");
-            }
-            InputStream urlStream = url.openConnection().getInputStream();
+            InputStream urlStream = builder.toURL().openConnection().getInputStream();
             BufferedReader bf = new BufferedReader(new InputStreamReader(urlStream, "UTF-8"));
             StringBuilder responseBuilder = new StringBuilder();
 
@@ -56,9 +58,7 @@ public class ScoreboardJSON implements Runnable {
                 input = bf.readLine();
             }
             jsonFile = new JSONObject(responseBuilder.toString());
-        } catch (IOException e) {
-            e.printStackTrace();
-        } catch (JSONException e) {
+        } catch (IOException|JSONException e) {
             e.printStackTrace();
         }
     }
